<resources>
    <string name="app_name">Contact App</string>
    <string name="fab_content_description">Add Contact</string>
    <string name="theme_toggle_description">mode</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>

</resources>