<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="16dp"
    android:background="#F8FDCF">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:background="@drawable/edittext_border"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#898DA6"
        android:inputType="textNoSuggestions"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:background="@drawable/edittext_border"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#828599"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="#FBFBFF"
            android:background="#FFF0F5"
            android:padding="14dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#FF0000"
            android:background="@android:color/transparent"
            android:padding="14dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:background="@android:color/transparent"
            android:padding="14dp" />

    </LinearLayout>
</LinearLayout>
